[tool.poetry]
name = "pyspark-delta-scd2"
version = "0.4.1"
description = "This project utilizes faker-pyspark to generate random schema and dataframes to mimic data table snapshots. Using these snapshots to process and apply SCD2 pattern into delta table as the destination."
authors = ["Sury Soni <github@suryasoni.info>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/spsoni/pyspark-delta-scd2"
keywords = ["Faker, PySpark", "DeltaTable"]
repository = "https://github.com/spsoni/pyspark-delta-scd2"
packages = [{include = "pyspark_delta_scd2"}]

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
delta-spark = "^2.4.0"
faker = "^18.11.1"
faker-pyspark = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
